--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,14 +36,16 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v2
+      uses: docker/login-action@v1
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GIT_TOKEN }}
-        push: true
-        tags: tuanha1305/app-sock5:${{ github.sha }}
-        context: .
+    - name: Build the hello-docker Docker image
+        run: |
+            docker build . --tag tuanha1305/app-sock5:${{ github.sha }}
+            docker run tuanha1305/app-sock5:${{ github.sha }}
+            docker push tuanha1305/app-sock5:${{ github.sha }}
 
     - name: Deploy to Production Server
       uses: appleboy/ssh-action@master
