--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -60,11 +60,11 @@ jobs:
         mkdir -p dist
         
         # Build cho các platform khác nhau
-        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-linux-amd64 .
-        GOOS=linux GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-linux-arm64 .
-        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-windows-amd64.exe .
-        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-darwin-amd64 .
-        GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-darwin-arm64 .
+        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-linux-amd64 ./cmd/s5-server
+        GOOS=linux GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-linux-arm64 ./cmd/s5-server
+        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-windows-amd64.exe ./cmd/s5-server
+        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-darwin-amd64 ./cmd/s5-server
+        GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-darwin-arm64 ./cmd/s5-server
         
     - name: Create archives
       run: |
