--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,13 @@
-on:
+- name: Build binaries
+      run: |
+        mkdir -p dist
+        
+        # Build cho các platform khác nhau
+        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-linux-amd64 ./cmd/s5-server
+        GOOS=linux GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-linux-arm64 ./cmd/s5-server
+        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-windows-amd64.exe ./cmd/s5-server
+        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-darwin-amd64 ./cmd/s5-server
+        GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-darwin-arm64 ./cmd/s5-serveron:
   push:
     branches: [master, main]
     tags: ['v*']
@@ -34,7 +43,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [test-nocache, test-cache]
-    if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+    if: startsWith(github.ref, 'refs/tags/v')
     outputs:
       version: ${{ steps.get_version.outputs.version }}
     steps:
@@ -60,11 +69,11 @@ jobs:
         mkdir -p dist
         
         # Build cho các platform khác nhau
-        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-linux-amd64 ./cmd/s5-server
-        GOOS=linux GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-linux-arm64 ./cmd/s5-server
-        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-windows-amd64.exe ./cmd/s5-server
-        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-darwin-amd64 ./cmd/s5-server
-        GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-darwin-arm64 ./cmd/s5-server
+        GOOS=linux GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-linux-amd64 .
+        GOOS=linux GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-linux-arm64 .
+        GOOS=windows GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-windows-amd64.exe .
+        GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w" -o dist/app-darwin-amd64 .
+        GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w" -o dist/app-darwin-arm64 .
         
     - name: Create archives
       run: |
@@ -74,12 +83,15 @@ jobs:
         zip app-windows-amd64.zip app-windows-amd64.exe
         tar -czf app-darwin-amd64.tar.gz app-darwin-amd64
         tar -czf app-darwin-arm64.tar.gz app-darwin-arm64
+        ls -la
         
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: binaries
-        path: dist/*.{tar.gz,zip}
+        path: |
+          dist/*.tar.gz
+          dist/*.zip
 
 
 
